<?xml version="1.0"?>
<package>
  <name>camera_command</name>
  <version>1.0.0</version>
  <description>O pacote camera_command, este pacote controla, sem feedback, a movimentação do robo CACIC, pioneer 3at, usando cartões coloridos</description>

  <maintainer email="gabriel.araujo.5000@gmail.com">Gabriel F P Araujo</maintainer>


  <author email="gabriel.araujo.5000@gmail.com">Gabriel F P Araujo</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
